--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "@vercel/analytics": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
+    "@vercel/analytics": "1.0.0",
     "autoprefixer": "10.4.14",
+    "cypress": "^12.14.0",
     "eslint": "8.38.0",
-    "eslint-config-next": "^13.3.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-next": "13.3.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "next": "13.3.0",
     "postcss": "8.4.21",
-    "prettier": "^2.8.7",
+    "prettier": "2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "4.8.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
