--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier:fix": "prettier --write '**/*.{ts,tsx,js,jsx,json,md}'"
   },
   "dependencies": {
+    "@next/font": "^13.4.7",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
