--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "prettier:fix": "prettier --write '**/*.{ts,tsx,js,jsx,json,md}'"
   },
   "dependencies": {
-    "@next/font": "13.4.7",
-    "@nextui-org/react": "2.0.16",
-    "@swc/helpers": "0.5.1",
+    "@headlessui/react": "1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
@@ -22,20 +21,20 @@
     "@typescript-eslint/parser": "5.58.0",
     "@vercel/analytics": "1.0.0",
     "autoprefixer": "10.4.14",
-    "cypress": "^12.14.0",
-    "eslint": "8.38.0",
+    "clsx": "^2.0.0",
+    "cypress": "12.14.0",
+    "eslint": "8.49.0",
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "framer-motion": "^10.15.1",
     "next": "13.4.7",
     "postcss": "8.4.21",
     "prettier": "2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "  3.3.3",
     "typescript": "5.0.4"
   },
   "main": "index.tsx",
