--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "next": "13.4.7",
     "postcss": "8.4.21",
-    "prettier": "2.8.7",
+    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0",
