--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "framer-motion": "^10.16.4",
     "next": "13.4.7",
     "postcss": "8.4.21",
     "prettier": "^3.0.3",
