--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "5.58.0",
     "@typescript-eslint/parser": "5.58.0",
     "@vercel/analytics": "1.0.0",
+    "@vercel/speed-insights": "^1.0.1",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
     "cypress": "12.14.0",
