--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "next": "13.4.7",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.21",
     "prettier": "^3.0.3",
     "react": "18.2.0",
