--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "framer-motion": "^11.11.10",
     "next": "13.4.7",
     "postcss": "8.4.21",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0",
+    "react-use-measure": "^2.1.1",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "  3.3.3",
     "typescript": "5.0.4"
   },
