--- a/package.json
+++ b/package.json
@@ -13,30 +13,29 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.17",
-    "@heroicons/react": "^2.0.18",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "5.58.0",
     "@typescript-eslint/parser": "5.58.0",
     "@vercel/analytics": "1.0.0",
-    "@vercel/speed-insights": "^1.0.1",
+    "@vercel/speed-insights": "1.0.1",
     "autoprefixer": "10.4.14",
-    "clsx": "^2.0.0",
+    "clsx": "2.0.0",
     "cypress": "12.14.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-tailwindcss": "3.13.0",
+    "lucide-react": "0.456.0",
     "next": "13.4.7",
-    "next-themes": "^0.3.0",
+    "next-themes": "0.3.0",
     "postcss": "8.4.21",
-    "prettier": "^3.0.3",
+    "prettier": "3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.8.0",
     "tailwindcss": "  3.3.3",
     "typescript": "5.0.4"
   },
