--- a/package.json
+++ b/package.json
@@ -1,46 +1,37 @@
 {
-  "name": "lesteban",
-  "version": "0.1.0",
-  "private": false,
+  "name": "lesteban-v2",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "eslint --ext .tsx --fix .",
-    "prettier": "prettier --check '**/*.{ts,tsx,js,jsx,json,md}'",
-    "prettier:fix": "prettier --write '**/*.{ts,tsx,js,jsx,json,md}'"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "1.7.17",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.34",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "5.58.0",
-    "@typescript-eslint/parser": "5.58.0",
-    "@vercel/analytics": "1.0.0",
-    "@vercel/speed-insights": "1.0.1",
-    "autoprefixer": "10.4.14",
-    "clsx": "2.0.0",
-    "cypress": "12.14.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.3.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-tailwindcss": "3.13.0",
-    "lucide-react": "0.456.0",
-    "next": "13.4.7",
-    "next-themes": "0.3.0",
-    "postcss": "8.4.21",
-    "prettier": "3.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "  3.3.3",
-    "typescript": "5.0.4"
+    "@tailwindcss/vite": "^4.1.3",
+    "lucide-react": "^0.487.0",
+    "path": "^0.12.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tailwindcss": "^4.1.3"
   },
-  "main": "index.tsx",
-  "repository": "git@github.com:LEstebanR/lesteban.git",
-  "author": "LEsteban",
-  "license": "MIT"
+  "devDependencies": {
+    "@eslint/js": "9.21.0",
+    "@types/node": "^22.14.1",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "@vitejs/plugin-react": "4.3.4",
+    "eslint": "9.21.0",
+    "eslint-plugin-react-hooks": "5.1.0",
+    "eslint-plugin-react-refresh": "0.4.19",
+    "globals": "15.15.0",
+    "prettier": "3.5.3",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "8.24.1",
+    "vite": "6.2.0",
+    "vite-tsconfig-paths": "^5.1.4"
+  },
+  "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
