--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.3",
-    "lucide-react": "^0.487.0",
-    "path": "^0.12.7",
+    "@tailwindcss/vite": "4.1.3",
+    "@vercel/analytics": "1.5.0",
+    "lucide-react": "0.487.0",
+    "path": "0.12.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "9.21.0",
-    "@types/node": "^22.14.1",
+    "@types/node": "22.14.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "4.3.4",
@@ -28,10 +29,10 @@
     "eslint-plugin-react-refresh": "0.4.19",
     "globals": "15.15.0",
     "prettier": "3.5.3",
-    "typescript": "~5.7.2",
+    "typescript": "5.7.2",
     "typescript-eslint": "8.24.1",
     "vite": "6.2.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "5.1.4"
   },
   "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
