--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,13 @@
       "jsx": true
     }
   },
-  "plugins": ["react", "react-hooks", "@typescript-eslint", "tailwindcss"],
+  "plugins": [
+    "react",
+    "react-hooks",
+    "@typescript-eslint",
+    "tailwindcss",
+    "prettier"
+  ],
   "extends": [
     "next/core-web-vitals",
     "eslint:recommended",
@@ -16,9 +22,13 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "prettier",
-    "plugin:tailwindcss/recommended"
+    "plugin:tailwindcss/recommended",
+    "plugin:prettier/recommended"
   ],
-  "rules": {},
+  "rules": {
+    "prettier/prettier": "error",
+    "sort-keys": ["error", "asc", { "caseSensitive": true, "natural": false }]
+  },
   "settings": {
     "react": {
       "version": "detect"
@@ -27,5 +37,18 @@
   "ignorePatterns": [
     "cypress/**/*.js",
     "src/lib/graphql/schema/__generated__/*"
+  ],
+  "overrides": [
+    {
+      "files": ["**/i18n/**/*.json"],
+      "parser": "jsonc-eslint-parser",
+      "rules": {
+        "sort-keys": [
+          "error",
+          "asc",
+          { "caseSensitive": true, "natural": false }
+        ]
+      }
+    }
   ]
 }
