--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@tailwindcss/vite": "4.1.3",
     "@vercel/analytics": "1.5.0",
+    "i18next": "25.0.2",
+    "i18next-browser-languagedetector": "8.1.0",
     "lucide-react": "0.487.0",
     "path": "0.12.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-i18next": "15.5.1",
     "tailwindcss": "4.1.3"
   },
   "devDependencies": {
@@ -23,12 +27,20 @@
     "@types/node": "22.14.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@typescript-eslint/eslint-plugin": "8.30.1",
+    "@typescript-eslint/parser": "8.30.1",
     "@vitejs/plugin-react": "4.3.4",
     "eslint": "9.21.0",
+    "eslint-config-prettier": "10.1.2",
+    "eslint-plugin-json": "^4.0.1",
+    "eslint-plugin-prettier": "5.2.6",
+    "eslint-plugin-react": "7.33.1",
     "eslint-plugin-react-hooks": "5.1.0",
     "eslint-plugin-react-refresh": "0.4.19",
     "globals": "15.15.0",
+    "jsonc-eslint-parser": "^2.4.0",
     "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "0.6.11",
     "typescript": "5.7.2",
     "typescript-eslint": "8.24.1",
     "vite": "6.2.0",
