--- a/package.json
+++ b/package.json
@@ -1,50 +1,28 @@
 {
-  "name": "lesteban-v2",
+  "name": "lesteban-next",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/vite": "4.1.3",
-    "@vercel/analytics": "1.5.0",
-    "i18next": "25.0.2",
-    "i18next-browser-languagedetector": "8.1.0",
-    "lucide-react": "0.487.0",
-    "path": "0.12.7",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-i18next": "15.5.1",
-    "tailwindcss": "4.1.3"
+    "lucide-react": "^0.510.0",
+    "next": "15.3.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "9.21.0",
-    "@types/node": "22.14.1",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
-    "@typescript-eslint/eslint-plugin": "8.30.1",
-    "@typescript-eslint/parser": "8.30.1",
-    "@vitejs/plugin-react": "4.3.4",
-    "eslint": "9.21.0",
-    "eslint-config-prettier": "10.1.2",
-    "eslint-plugin-json": "^4.0.1",
-    "eslint-plugin-prettier": "5.2.6",
-    "eslint-plugin-react": "7.33.1",
-    "eslint-plugin-react-hooks": "5.1.0",
-    "eslint-plugin-react-refresh": "0.4.19",
-    "globals": "15.15.0",
-    "jsonc-eslint-parser": "^2.4.0",
-    "prettier": "3.5.3",
-    "prettier-plugin-tailwindcss": "0.6.11",
-    "typescript": "5.7.2",
-    "typescript-eslint": "8.24.1",
-    "vite": "6.2.0",
-    "vite-tsconfig-paths": "5.1.4"
-  },
-  "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.2",
+    "@eslint/eslintrc": "^3"
+  }
 }
