--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,7 @@ name: Lint
 
 on:
   pull_request:
-    branches:
-      - main
-      - develop
+    types: [opened, edited, reopened, synchronize]
 
 jobs:
   lint:
