--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -33,6 +36,7 @@
     "@types/react-dom": "19",
     "eslint": "9",
     "eslint-config-next": "15.3.2",
+    "prettier": "^3.6.2",
     "tailwindcss": "4",
     "tw-animate-css": "1.2.9",
     "typescript": "5"
