--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "2.1.15",
-    "@radix-ui/react-slot": "1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/typography": "^0.5.19",
     "@trivago/prettier-plugin-sort-imports": "5.2.2",
     "@vercel/analytics": "1.5.0",
     "@vercel/speed-insights": "1.2.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "framer-motion": "^12.23.24",
+    "gray-matter": "^4.0.3",
     "lucide-react": "0.510.0",
     "next": "15.5.2",
     "next-themes": "0.4.6",
     "prettier-plugin-tailwindcss": "0.6.12",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "3.3.0"
   },
   "devDependencies": {
