--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "create:post": "bun scripts/create-post.ts",
+    "test": "bun test",
+    "test:watch": "bun test --watch"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "2.1.15",
@@ -29,13 +32,19 @@
     "prettier-plugin-tailwindcss": "0.6.12",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "remark-rehype": "^11.1.2",
     "tailwind-merge": "3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3",
     "@tailwindcss/postcss": "4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/bun": "^1.3.1",
     "@types/node": "20",
     "@types/react": "19",
     "@types/react-dom": "19",
