--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "create:post": "bun scripts/create-post.ts",
+    "test": "bun test",
+    "test:watch": "bun test --watch"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "2.1.15",
@@ -24,18 +27,25 @@
     "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
     "lucide-react": "0.510.0",
+    "motion": "^12.23.24",
     "next": "15.5.2",
     "next-themes": "0.4.6",
     "prettier-plugin-tailwindcss": "0.6.12",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "remark-rehype": "^11.1.2",
     "tailwind-merge": "3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3",
     "@tailwindcss/postcss": "4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/bun": "^1.3.1",
     "@types/node": "20",
     "@types/react": "19",
     "@types/react-dom": "19",
@@ -45,5 +55,6 @@
     "tailwindcss": "4",
     "tw-animate-css": "1.2.9",
     "typescript": "5"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
